--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Code First Girls</title>
+      <title>my title</title>
       <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   <body>
